--- a/visualizer.html
+++ b/visualizer.html
@@ -1,13 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="visualizer.css">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="visualizer.css" />
   </head>
 
   <body>
     <canvas id="display"></canvas>
     <script src="visualizer.js"></script>
   </body>
-
 </html>
