--- a/visualizer.html
+++ b/visualizer.html
@@ -7,6 +7,6 @@
 
   <body>
     <canvas id="display"></canvas>
-    <script src="visualizer.js"></script>
+    <script src="visualizer_v1.js"></script>
   </body>
 </html>
